--- a/Science.html
+++ b/Science.html
@@ -21,7 +21,7 @@
         <a href="Our-Story.html"     class="nav-link">Our Story</a>
         <a href="Contact.html"   class="nav-link">Contact</a>
       </nav>
-      <a href="products.html" class="cta-contact">Buy Now</a>
+      <a href="Products.html" class="cta-contact">Buy Now</a>
     </div>
   </header>
 
