--- a/Products.html
+++ b/Products.html
@@ -17,11 +17,11 @@
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="Products.html"  class="nav-link">Products</a>
         <a href="Science.html"   class="nav-link">Science</a>
-        <a href="Nutrition.html" class="nav-link">Nutrition</a>
+        <a href="nutrition.html" class="nav-link">Nutrition</a>
         <a href="Our-Story.html"     class="nav-link">Our Story</a>
         <a href="Contact.html"   class="nav-link">Contact</a>
       </nav>
-      <a href="products.html" class="cta-contact">Buy Now</a>
+      <a href="Products.html" class="cta-contact">Buy Now</a>
     </div>
   </header>
 
