--- a/Our-Story.html
+++ b/Our-Story.html
@@ -15,13 +15,13 @@
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
       </a>
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
-        <a href="products.html"  class="nav-link">Products</a>
-        <a href="science.html"   class="nav-link">Science</a>
+        <a href="Products.html"  class="nav-link">Products</a>
+        <a href="Science.html"   class="nav-link">Science</a>
         <a href="nutrition.html" class="nav-link">Nutrition</a>
-        <a href="story.html"     class="nav-link">Our Story</a>
-        <a href="contact.html"   class="nav-link">Contact</a>
+        <a href="Our-Story.html"     class="nav-link">Our Story</a>
+        <a href="Contact.html"   class="nav-link">Contact</a>
       </nav>
-      <a href="products.html" class="cta-contact">Buy Now</a>
+      <a href="Products.html" class="cta-contact">Buy Now</a>
     </div>
   </header>
 
