--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="Contact.html"   class="nav-link">Contact</a>
       </nav>
 
-      <a href="products.html" class="cta-contact">Buy Now</a>
+      <a href="Products.html" class="cta-contact">Buy Now</a>
     </div>
   </header>
 
