--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
       <!-- Main nav -->
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
-        <a href="#Products.html" class="nav-link">Products</a>
-        <a href="#Science.html" class="nav-link">Science</a>
-        <a href="#Nutrition.html" class="nav-link">Nutrition</a>
-        <a href="#Our-Story.html" class="nav-link">Our Story</a>
-        <a href="#Contact.html" class="nav-link">Contact</a>
+        <a href="#products.html" class="nav-link">Products</a>
+        <a href="#science.html" class="nav-link">Science</a>
+        <a href="#nutrition.html" class="nav-link">Nutrition</a>
+        <a href="#our-story.html" class="nav-link">Our Story</a>
+        <a href="#contact.html" class="nav-link">Contact</a>
       </nav>
 
       <!-- CTA -->
