--- a/Nutrition.html
+++ b/Nutrition.html
@@ -6,7 +6,7 @@
   <title>Nutrition — Buzzbar</title>
   <link rel="stylesheet" href="style.css?v=7" />
 </head>
-<body data-page="nutrition">
+<body data-page="Nutrition">
   <div class="page-top-gradient"></div>
   <header class="site-header" role="banner">
     <div class="container header-inner">
@@ -17,7 +17,7 @@
       <nav class="main-nav" role="navigation" aria-label="Primary navigation">
         <a href="Products.html"  class="nav-link">Products</a>
         <a href="Science.html"   class="nav-link">Science</a>
-        <a href="nutrition.html" class="nav-link">Nutrition</a>
+        <a href="Nutrition.html" class="nav-link">Nutrition</a>
         <a href="Our-Story.html"     class="nav-link">Our Story</a>
         <a href="Contact.html"   class="nav-link">Contact</a>
       </nav>
