--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Buzzbar – Natural Energy</title>
+  <title>BuzzBar – Natural Energy</title>
   <link rel="stylesheet" href="style.css?v=5" />
 </head>
 <body>
@@ -18,7 +18,7 @@
       <a href="#home" class="brand" aria-label="Buzzbar — Home">
         <span class="brand-line">
           <span class="brand-word buzz">Buzz</span>
-          <span class="brand-word bar">bar</span>
+          <span class="brand-word bar">Bar</span>
         </span>
         <span class="brand-sub">CLEAN ENERGY, SMARTER NUTRITION</span>
       </a>
