Refactor hero section in index.html

--- a/index.html
+++ b/index.html
@@ -38,53 +38,47 @@
   </header>
 
 
-<!-- ===== HERO ===== -->
-<section class="hero hero--photo" id="home">
-  <div class="hero-container container hero-grid">
-    <!-- LEFT: keep your existing content -->
-    <div class="hero-content">
-      <span class="hero-badge">New</span>
-      <h1 class="hero-title">
-        <span class="title-line">Clean, steady energy</span>
-        <span class="title-line highlight">without the crash</span>
-      </h1>
-      <p class="hero-subtitle">
-        Functional bars with green tea caffeine, L-theanine, electrolytes and adaptogens.
-      </p>
+ <!-- ===== HERO ===== -->
+  <section class="hero hero--photo" id="home">
+    <div class="hero-container container">
+      <div class="hero-content">
+        <span class="hero-badge">New</span>
+        <h1 class="hero-title">
+          <span class="title-line">Clean, steady energy</span>
+          <span class="title-line highlight">without the crash</span>
+        </h1>
+        <p class="hero-subtitle">
+          Functional bars with green tea caffeine, L-theanine, electrolytes and adaptogens.
+        </p>
 
-      <div class="hero-actions">
-        <a href="#products" class="cta-primary">See Products</a>
-        <a href="#science" class="cta-secondary">How it works</a>
-      </div>
+        <div class="hero-actions">
+          <a href="#products" class="cta-primary">See Products</a>
+          <a href="#science" class="cta-secondary">How it works</a>
+        </div>
 
-      <div class="hero-stats">
-        <div class="stat">
-          <span class="stat-number">80mg</span>
-          <span class="stat-label">Clean Caffeine</span>
+        <div class="hero-stats">
+          <div class="stat">
+            <span class="stat-number">80mg</span>
+            <span class="stat-label">Clean Caffiene</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">20g</span>
+            <span class="stat-label">Protein</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number">Vegan</span>
+            <span class="stat-label">Friendly</span>
+          </div>
         </div>
-        <div class="stat">
-          <span class="stat-number">20g</span>
-          <span class="stat-label">Protein</span>
-        </div>
-        <div class="stat">
-          <span class="stat-number">Vegan</span>
-          <span class="stat-label">Friendly</span>
-        </div>
-      </div>
-    </div>
-
-    <!-- RIGHT: the orange Energy card -->
-    <div class="hero-side">
-      <div class="energy-card">
-        <h3 class="energy-title">Energy</h3>
-        <p class="energy-line">Bright, uplifting, sustained.</p>
-        <p class="energy-line">Green tea caffeine + B-vitamins.</p>
-        <p class="energy-line">Electrolytes</p>
-        <p class="energy-line">No Crash</p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+
+  <!-- Nice inline CTA to show .cta-primary styles outside hero -->
+  <section class="container" style="padding:40px 0;text-align:center;">
+    <button class="cta-primary" style="border:none;">Join the launch list</button>
+  </section>
+
 
 
   <!-- ===== PRODUCTS ===== -->
