Move energy product card to hero section and position to the right of text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BuzzBar – Natural Energy</title>
-  <link rel="stylesheet" href="style.css?v=5" />
+  <link rel="stylesheet" href="style.css?v=8" />
 </head>
 <body>
 
@@ -71,6 +71,29 @@
           </div>
         </div>
       </div>
+
+      <!-- Energy Product Card -->
+      <article class="product-card hero-product-card active">
+        <div class="product-visual">
+          <span class="product-badge">Popular</span>
+          <div class="bar-3d bar-energy-3d"></div>
+        </div>
+        <div class="product-info">
+          <h3>Energy</h3>
+          <p class="product-tagline">Bright, uplifting, sustained.</p>
+          <p class="product-description">Green tea caffeine + B-vitamins.</p>
+          <div class="product-specs">
+            <span class="spec">Electrolytes</span>
+            <span class="spec">No Crash</span>
+            <span class="spec">Gluten-free</span>
+          </div>
+          <div class="flavors">
+            <span class="flavor-dot lemon" title="Lemon"></span>
+            <span class="flavor-dot espresso" title="Espresso"></span>
+            <span class="flavor-dot citrus" title="Citrus"></span>
+          </div>
+        </div>
+      </article>
     </div>
   </section>
 
