Remove multiple flavours, keep single Energy product

--- a/index.html
+++ b/index.html
@@ -87,11 +87,6 @@
             <span class="spec">No Crash</span>
             <span class="spec">Gluten-free</span>
           </div>
-          <div class="flavors">
-            <span class="flavor-dot lemon" title="Lemon"></span>
-            <span class="flavor-dot espresso" title="Espresso"></span>
-            <span class="flavor-dot citrus" title="Citrus"></span>
-          </div>
         </div>
       </article>
     </div>
@@ -109,8 +104,8 @@
     <div class="container">
       <div class="section-header">
         <span class="section-badge">Products</span>
-        <h2>Pick your boost</h2>
-        <p class="section-subtitle">Energy, Focus and Recovery blends.</p>
+        <h2>Clean Energy Bars</h2>
+        <p class="section-subtitle">Sustained energy without the crash.</p>
       </div>
 
       <div class="products-carousel">
@@ -129,56 +124,9 @@
               <span class="spec">No Crash</span>
               <span class="spec">Gluten-free</span>
             </div>
-            <div class="flavors">
-              <span class="flavor-dot lemon" title="Lemon"></span>
-              <span class="flavor-dot espresso" title="Espresso"></span>
-              <span class="flavor-dot citrus" title="Citrus"></span>
-            </div>
           </div>
         </article>
 
-        <!-- Focus -->
-        <article class="product-card">
-          <div class="product-visual">
-            <div class="bar-3d bar-focus-3d"></div>
-          </div>
-          <div class="product-info">
-            <h3>Focus</h3>
-            <p class="product-tagline">Calm, clear concentration.</p>
-            <p class="product-description">L-theanine + lion’s mane + magnesium.</p>
-            <div class="product-specs">
-              <span class="spec">No Jitters</span>
-              <span class="spec">Smooth</span>
-              <span class="spec">Vegan</span>
-            </div>
-            <div class="flavors">
-              <span class="flavor-dot matcha" title="Matcha"></span>
-              <span class="flavor-dot blueberry" title="Blueberry"></span>
-            </div>
-          </div>
-        </article>
-
-        <!-- Recovery -->
-        <article class="product-card">
-          <div class="product-visual">
-            <div class="bar-3d bar-recovery-3d"></div>
-          </div>
-          <div class="product-info">
-            <h3>Recovery</h3>
-            <p class="product-tagline">Rebuild and recharge.</p>
-            <p class="product-description">10g plant protein + antioxidants.</p>
-            <div class="product-specs">
-              <span class="spec">Vitamin C&E</span>
-              <span class="spec">Electrolytes</span>
-              <span class="spec">Non-GMO</span>
-            </div>
-            <div class="flavors">
-              <span class="flavor-dot peanut" title="Peanut"></span>
-              <span class="flavor-dot chocolate" title="Chocolate"></span>
-              <span class="flavor-dot cinnamon" title="Cinnamon"></span>
-            </div>
-          </div>
-        </article>
       </div>
 
       <div class="carousel-controls">
