Add Our Story section after hero, remove Products section

--- a/index.html
+++ b/index.html
@@ -97,41 +97,39 @@
     <button class="cta-primary" style="border:none;">Join the launch list</button>
   </section>
 
-
-
-  <!-- ===== PRODUCTS ===== -->
-  <section id="products" class="products-section">
+  <!-- ===== OUR STORY ===== -->
+  <section id="our-story" class="our-story">
     <div class="container">
       <div class="section-header">
-        <span class="section-badge">Products</span>
-        <h2>Clean Energy Bars</h2>
-        <p class="section-subtitle">Sustained energy without the crash.</p>
+        <span class="section-badge">Mission & Story</span>
+        <h2>Built for busy days. Designed for clean, steady energy.</h2>
+        <p class="section-subtitle">Why we started, who we are, and where we're going.</p>
       </div>
 
-      <div class="products-carousel">
-        <!-- Energy -->
-        <article class="product-card active">
-          <div class="product-visual">
-            <span class="product-badge">Popular</span>
-            <div class="bar-3d bar-energy-3d"></div>
+      <div class="story-grid">
+        <div class="story-text">
+          <div class="story-intro">
+            <h3>Why Buzzbar?</h3>
+            <p>We wanted a clean, nutritious energy source without brewing, chugging, or cooking. Something we could grab on the run.</p>
           </div>
-          <div class="product-info">
-            <h3>Energy</h3>
-            <p class="product-tagline">Bright, uplifting, sustained.</p>
-            <p class="product-description">Green tea caffeine + B-vitamins.</p>
-            <div class="product-specs">
-              <span class="spec">Electrolytes</span>
-              <span class="spec">No Crash</span>
-              <span class="spec">Gluten-free</span>
-            </div>
+          <div class="story-journey">
+            <h3>What we're building</h3>
+            <p>Natural caffeine from green tea, L-theanine for calm focus, electrolytes for hydration, and a label you can read.</p>
           </div>
-        </article>
-
+          <div class="story-values">
+            <div class="value-item"><div class="value-icon">⚡</div><div><h4>No crash</h4><p>Steady energy for classes, deep work, workouts.</p></div></div>
+            <div class="value-item"><div class="value-icon">🌿</div><div><h4>Plant-based</h4><p>No artificial sweeteners; simple ingredients.</p></div></div>
+          </div>
+        </div>
+        <aside class="story-visual">
+          <img src="IMG_8401.JPG" alt="Buzzbar founders" class="story-image" />
+        </aside>
       </div>
 
-      <div class="carousel-controls">
-        <button class="carousel-btn" aria-label="Prev">‹</button>
-        <button class="carousel-btn" aria-label="Next">›</button>
+      <div class="founders-row">
+        <article class="founder-card"><div class="founder-avatar">TW</div><h3>Tom Wiseman</h3><p class="role">Co-Founder</p></article>
+        <article class="founder-card"><div class="founder-avatar">CW</div><h3>Charlie Wiseman</h3><p class="role">Co-Founder</p></article>
+        <article class="founder-card"><div class="founder-avatar">OW</div><h3>Oliver Wiseman</h3><p class="role">Co-Founder</p></article>
       </div>
     </div>
   </section>
