Match exact structure from original Our Story section

--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
         <h2>Built for busy days. Designed for clean, steady energy.</h2>
         <p class="section-subtitle">Why we started, who we are, and where we're going.</p>
       </div>
+    </div>
 
-      <div class="story-grid">
+    <div class="container story-grid">
         <div class="story-text">
           <div class="story-intro">
             <h3>Why Buzzbar?</h3>
@@ -121,16 +122,15 @@
             <div class="value-item"><div class="value-icon">🌿</div><div><h4>Plant-based</h4><p>No artificial sweeteners; simple ingredients.</p></div></div>
           </div>
         </div>
-        <aside class="story-visual">
-          <img src="IMG_8401.JPG" alt="Buzzbar founders" class="story-image" />
-        </aside>
-      </div>
+      <aside class="story-visual">
+        <img src="IMG_8401.JPG" alt="Buzzbar founders" class="story-image" />
+      </aside>
+    </div>
 
-      <div class="founders-row">
-        <article class="founder-card"><div class="founder-avatar">TW</div><h3>Tom Wiseman</h3><p class="role">Co-Founder</p></article>
-        <article class="founder-card"><div class="founder-avatar">CW</div><h3>Charlie Wiseman</h3><p class="role">Co-Founder</p></article>
-        <article class="founder-card"><div class="founder-avatar">OW</div><h3>Oliver Wiseman</h3><p class="role">Co-Founder</p></article>
-      </div>
+    <div class="container founders-row" style="margin-top:32px">
+      <article class="founder-card"><div class="founder-avatar">TW</div><h3>Tom Wiseman</h3><p class="role">Co-Founder</p></article>
+      <article class="founder-card"><div class="founder-avatar">CW</div><h3>Charlie Wiseman</h3><p class="role">Co-Founder</p></article>
+      <article class="founder-card"><div class="founder-avatar">OW</div><h3>Oliver Wiseman</h3><p class="role">Co-Founder</p></article>
     </div>
   </section>
 
